// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`View Field Resolver - Failing Operations - v2 createCoreViewField should fail to create view field when non-existent field metadata 1`] = `
{
  "extensions": {
    "code": "INTERNAL_SERVER_ERROR",
    "exceptionEventId": "mocked-exception-id",
    "userFriendlyMessage": "An error occurred.",
  },
  "message": "Multiple validation errors occurred while creating view field",
}
`;

exports[`View Field Resolver - Failing Operations - v2 createCoreViewField should fail to create view field when non-existent view metadata 1`] = `
{
  "extensions": {
    "code": "INTERNAL_SERVER_ERROR",
    "exceptionEventId": "mocked-exception-id",
    "userFriendlyMessage": "An error occurred.",
  },
  "message": "Multiple validation errors occurred while creating view field",
}
`;

exports[`View Field Resolver - Failing Operations - v2 deleteCoreViewField should fail to delete view field when non-existent view field 1`] = `
{
  "extensions": {
    "code": "NOT_FOUND",
    "userFriendlyMessage": "An error occurred.",
  },
  "message": "View field to delete not found",
  "name": "NotFoundError",
}
`;

exports[`View Field Resolver - Failing Operations - v2 destroyCoreViewField should fail to destroy view field when non-existent view field 1`] = `
{
  "extensions": {
    "code": "NOT_FOUND",
    "userFriendlyMessage": "An error occurred.",
  },
  "message": "View field to destroy not found",
  "name": "NotFoundError",
}
`;

exports[`View Field Resolver - Failing Operations - v2 updateCoreViewField should fail to update view field when non-existent view field 1`] = `
{
  "extensions": {
    "code": "NOT_FOUND",
    "userFriendlyMessage": "An error occurred.",
  },
  "message": "View field to update not found",
  "name": "NotFoundError",
}
`;
